// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLaunchView should render app with no engine version 1`] = `
<div
  className="list-group"
>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
      <div>
        <span
          className="alert-icon-bg"
        />
        <span
          className="mdi mdi-alert"
          title="The app does not specify which nRF Connect version(s) it supports"
        />
      </div>
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        pc-nrfconnect-foobar
      </h4>
      <p
        className="list-group-item-text"
      >
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="core-app-item-group dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render app with unsupported engine version 1`] = `
<div
  className="list-group"
>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
      <div>
        <span
          className="alert-icon-bg"
        />
        <span
          className="mdi mdi-alert"
          title="The app only supports nRF Connect 1.x, which does not match your currently installed version"
        />
      </div>
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        pc-nrfconnect-foobar
      </h4>
      <p
        className="list-group-item-text"
      >
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="core-app-item-group dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render app with upgrade available 1`] = `
<div
  className="list-group"
>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
      <div>
        <span
          className="info-icon-bg"
        />
        <span
          className="mdi mdi-information"
          title="A new version (v1.2.4) of this app is available, and can be installed from the \\"Add/remove apps\\" screen"
        />
      </div>
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        pc-nrfconnect-foobar
      </h4>
      <p
        className="list-group-item-text"
      >
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="core-app-item-group dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render apps sorted by name and isOfficial 1`] = `
<div
  className="list-group"
>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appA
      </h4>
      <p
        className="list-group-item-text"
      >
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="core-app-item-group dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appA
      </h4>
      <p
        className="list-group-item-text"
      >
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="core-app-item-group dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appA
      </h4>
      <p
        className="list-group-item-text"
      >
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="core-app-item-group dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appB
      </h4>
      <p
        className="list-group-item-text"
      >
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="core-app-item-group dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="core-app-launch-item list-group-item"
  >
    <div
      className="core-app-icon"
    >
      <img
        alt="App icon"
        draggable={false}
        src="test-file-stub"
      />
    </div>
    <div>
      <h4
        className="list-group-item-heading"
      >
        appB
      </h4>
      <p
        className="list-group-item-text"
      >
        local
        , v
        1.2.3
      </p>
    </div>
    <div
      className="core-app-launch-item-buttons btn-toolbar"
    >
      <button
        className="btn btn-primary core-btn"
        disabled={false}
        onClick={[Function]}
        title="Launch app"
        type="button"
      >
        <span
          className="mdi mdi-play"
        />
        <span
          className="core-btn-text"
        >
          Launch
        </span>
      </button>
      <div
        className="dropdown btn-group core-dropdown"
      >
        <div
          className="core-app-item-group dropdown"
          onKeyDown={[Function]}
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-primary"
            disabled={false}
            id="bg-nested-dropdown"
            onClick={[Function]}
            type="button"
          >
            
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLaunchView should render spinner while retrieving apps 1`] = `
<div
  className="core-loading-apps-spinner"
/>
`;

exports[`AppLaunchView should render without any apps 1`] = `
<div
  className="list-group"
>
  <div>
    <h4>
      Welcome to nRF Connect
    </h4>
    <p>
      To get started, go to
      <i>
        Add/remove apps
      </i>
      to install some apps.
    </p>
  </div>
</div>
`;
